MB-19925 Use compare_exchange_strong for prefetch thread join

- Calling thread_join() based on the previous status condition may
result in thread leak, if the status was already changed to IDLE
or ABORT.

Change-Id: I1a97875279d9de67ef02c30b1e1e2d635cb6a2d2
Reviewed-on: http://review.couchbase.org/65196
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>
Tested-by: Chiyoung Seo <chiyoung@couchbase.com>